Adding the git autoclean and einblick tools.

--- a/notebooks/Retail/prompt_generated_cleaning.ipynb
+++ b/notebooks/Retail/prompt_generated_cleaning.ipynb
@@ -2,137 +2,110 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ec8b1777-c625-4197-ac5e-94dbb7a62ac5",
+   "id": "c95e51a8-b93c-4fe2-a181-f44764344c01",
    "metadata": {},
    "source": [
-    "## Read Data"
+    "## Read Data\n",
+    "### Use Prompt Generation to generate code to read pandas data frame"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "85ee8126",
-   "metadata": {
-    "canvas": {
-     "comments": [],
-     "componentType": "CodeCell",
-     "copiedOriginId": null,
-     "diskcache": false,
-     "headerColor": "transparent",
-     "id": "9b19758f-15c9-4d44-b09f-a1274ea8e1a4",
-     "isComponent": false,
-     "name": "",
-     "parents": []
-    },
-    "tags": []
-   },
+   "id": "307b7d87-fa0a-46d5-9599-cf492b64778d",
+   "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        Invoice StockCode                          Description Quantity  \\\n",
+      "0        489434     85048  15CM CHRISTMAS GLASS BALL 20 LIGHTS       12   \n",
+      "1        489434    79323P                   PINK CHERRY LIGHTS       12   \n",
+      "2        489434    79323W                  WHITE CHERRY LIGHTS       12   \n",
+      "3        489434     22041         RECORD FRAME 7\" SINGLE SIZE        48   \n",
+      "4        489434     21232       STRAWBERRY CERAMIC TRINKET BOX       24   \n",
+      "...         ...       ...                                  ...      ...   \n",
+      "1067367  581587     22899         CHILDREN'S APRON DOLLY GIRL         6   \n",
+      "1067368  581587     23254        CHILDRENS CUTLERY DOLLY GIRL         4   \n",
+      "1067369  581587     23255      CHILDRENS CUTLERY CIRCUS PARADE        4   \n",
+      "1067370  581587     22138        BAKING SET 9 PIECE RETROSPOT         3   \n",
+      "1067371  581587      POST                              POSTAGE        1   \n",
+      "\n",
+      "           InvoiceDate Price Customer ID         Country  \n",
+      "0         12/1/09 7:45  6.95     13085.0  United Kingdom  \n",
+      "1         12/1/09 7:45  6.75     13085.0  United Kingdom  \n",
+      "2         12/1/09 7:45  6.75     13085.0  United Kingdom  \n",
+      "3         12/1/09 7:45   2.1     13085.0  United Kingdom  \n",
+      "4         12/1/09 7:45  1.25     13085.0  United Kingdom  \n",
+      "...                ...   ...         ...             ...  \n",
+      "1067367  12/9/11 12:50   2.1     12680.0          France  \n",
+      "1067368  12/9/11 12:50  4.15     12680.0          France  \n",
+      "1067369  12/9/11 12:50  4.15     12680.0          France  \n",
+      "1067370  12/9/11 12:50  4.95     12680.0          France  \n",
+      "1067371  12/9/11 12:50  18.0     12680.0          France  \n",
+      "\n",
+      "[1067372 rows x 8 columns]\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/fb/t_m5qpcj6qq85rvkh73vbxh40000gn/T/ipykernel_7221/4177313966.py:3: DtypeWarning: Columns (3,5,6) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(fp)\n"
+      "/var/folders/fb/t_m5qpcj6qq85rvkh73vbxh40000gn/T/ipykernel_5612/4292484759.py:7: DtypeWarning: Columns (3,5,6) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  new_df = pd.read_csv(fp)\n"
      ]
     }
    ],
    "source": [
+    "# Assuming the dataframe already exists with the variable name 'df'\n",
+    "# We can use the pandas read_csv() function to read a CSV file and assign it to a new variable\n",
+    "\n",
     "import pandas as pd\n",
     "fp = \"../../data/online_retail_II.csv\"\n",
-    "df = pd.read_csv(fp)"
+    "# Read the CSV file and assign it to a new variable\n",
+    "new_df = pd.read_csv(fp)\n",
+    "\n",
+    "# Print the new dataframe\n",
+    "print(new_df)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "96ca47be-ccfe-4614-bbab-2d91f4fbb758",
+   "id": "64700c85-b349-4013-af38-6e9463000e40",
    "metadata": {},
    "source": [
-    "## Noise Filter #1 Definition"
+    "## Noise Filter #1 Definition\n",
+    "### Generated through prompt einblick extension"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "dc1b4b72",
-   "metadata": {
-    "canvas": {
-     "comments": [],
-     "componentType": "CodeCell",
-     "copiedOriginId": null,
-     "diskcache": false,
-     "headerColor": "transparent",
-     "id": "a28d465b-6a9a-4deb-b3e8-80ba52c471fe",
-     "isComponent": false,
-     "name": "",
-     "parents": []
-    },
-    "tags": []
-   },
+   "id": "a74aea0d-8113-4f41-9c99-d22edeb34c43",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "valid_cust = ~df[\"Customer ID\"].isna()\n",
-    "valid_desc = ~df[\"Description\"].isna()\n",
-    "valid_stock_code = ~df[\"Description\"].isna()"
+    "\n",
+    "\n",
+    "# Remove null values for columns \"StockCode\", \"Customer ID\" and \"Description\"\n",
+    "new_df.dropna(subset=[\"StockCode\", \"Customer ID\", \"Description\"], inplace=True)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1a4b73e9-305f-4488-9d9f-ff8e573c4135",
+   "id": "dd55cd93-f4ba-403c-b8de-ad50071639c4",
    "metadata": {},
    "source": [
-    "## Apply Noise Filter # 1"
+    "## Noise Filter #3 "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ca0bceb2",
-   "metadata": {
-    "canvas": {
-     "comments": [],
-     "componentType": "CodeCell",
-     "copiedOriginId": null,
-     "diskcache": false,
-     "headerColor": "transparent",
-     "id": "416d12e2-7723-4363-9954-6670c0bedc9f",
-     "isComponent": false,
-     "name": "",
-     "parents": []
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "noise_filter_1 = valid_cust & valid_desc\n",
-    "df = df[noise_filter_1].reset_index(drop=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "01719bc7-e33d-483b-a9f0-311d9e15d0a2",
+   "id": "076b05e4-011e-4e29-ac88-d7448ea33fb8",
    "metadata": {},
-   "source": [
-    "## Noise Filter #2 Definition"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "932e99d1-aeb1-4ff3-b201-340048327205",
-   "metadata": {
-    "canvas": {
-     "comments": [],
-     "componentType": "CodeCell",
-     "copiedOriginId": null,
-     "diskcache": false,
-     "headerColor": "transparent",
-     "id": "346108a0-beaa-4af1-a6a3-68127d65bb02",
-     "isComponent": false,
-     "name": "",
-     "parents": []
-    },
-    "tags": []
-   },
    "outputs": [],
    "source": [
     "def good_quantity_record_check(x):\n",
@@ -143,109 +116,15 @@
     "        else:\n",
     "            return False # returned purchase\n",
     "    except :\n",
-    "        return False\n"
+    "        return False\n",
+    "good_quantity_records = new_df[\"Quantity\"].apply(good_quantity_record_check)\n",
+    "new_df = new_df[good_quantity_records]\n",
+    "new_df = new_df.reset_index(drop=True)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9cf3f737-ce50-449f-ba8c-ea46aada86a3",
-   "metadata": {},
-   "source": [
-    "## Apply Noise Filter #2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "8f57b8a3-d9cc-4e56-a539-2de650a2116d",
-   "metadata": {
-    "canvas": {
-     "comments": [],
-     "componentType": "CodeCell",
-     "copiedOriginId": null,
-     "diskcache": false,
-     "headerColor": "transparent",
-     "id": "a0e3b8ed-e1ec-421f-a8b6-6e0acc143e46",
-     "isComponent": false,
-     "name": "",
-     "parents": []
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "good_quantity_records = df[\"Quantity\"].apply(good_quantity_record_check)\n",
-    "df = df[good_quantity_records]\n",
-    "df = df.reset_index(drop=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9e73a497-b50f-498c-b798-9784840c36c5",
-   "metadata": {},
-   "source": [
-    "## Noise Filter #3 Definition"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "4e5e52b1-f010-44f6-8748-adb470fb7c15",
-   "metadata": {
-    "canvas": {
-     "comments": [],
-     "componentType": "CodeCell",
-     "copiedOriginId": null,
-     "diskcache": false,
-     "headerColor": "transparent",
-     "id": "692220ee-ff53-430e-a896-a50741b417dc",
-     "isComponent": false,
-     "name": "",
-     "parents": []
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "return_or_bank_charges = (df.Price == \"BANK CHARGES\") | (df.Price == \"ADJUST\")\n",
-    "valid_purchases = ~ return_or_bank_charges"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3b4426e6-9884-4e5c-99b5-a62cd5cfbc88",
-   "metadata": {},
-   "source": [
-    "## Apply Noise Filter #3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "2694127b",
-   "metadata": {
-    "canvas": {
-     "comments": [],
-     "componentType": "CodeCell",
-     "copiedOriginId": null,
-     "diskcache": false,
-     "headerColor": "transparent",
-     "id": "0295c30e-ca12-49b8-bc22-db0a143a75ea",
-     "isComponent": false,
-     "name": "",
-     "parents": []
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "df = df[valid_purchases]\n",
-    "df = df.reset_index(drop=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "549cbf37-8641-4d75-a6ef-9c626778a545",
+   "id": "99223da4-48a6-4856-b955-88f24779dd77",
    "metadata": {},
    "source": [
     "## Noise Filter #4 Definition"
@@ -253,22 +132,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "489c1ec9-abae-4162-87a8-cd79f7af20fa",
-   "metadata": {
-    "canvas": {
-     "comments": [],
-     "componentType": "CodeCell",
-     "copiedOriginId": null,
-     "diskcache": false,
-     "headerColor": "transparent",
-     "id": "b8d7fa16-6500-4d84-b117-694385e03b30",
-     "isComponent": false,
-     "name": "",
-     "parents": []
-    },
-    "tags": []
-   },
+   "execution_count": 4,
+   "id": "6d95a9b8-0b28-484f-b294-f33a4f8faef4",
+   "metadata": {},
    "outputs": [],
    "source": [
     "def not_test_product(x):\n",
@@ -277,179 +143,72 @@
     "    elif x in [\"ADJUST\", \"BANK CHARGES\", \"C2\", \"M\"]:\n",
     "        return False\n",
     "    else:\n",
-    "        return True"
+    "        return True\n",
+    "valid_products = new_df[\"StockCode\"].apply(not_test_product)\n",
+    "new_df = new_df[valid_products]\n",
+    "new_df = new_df.reset_index(drop=True)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1d887dfc-6d3c-4f81-91d2-7f843fb4ed53",
+   "id": "d6437835-dc9f-4c25-983a-8efb10124566",
    "metadata": {},
    "source": [
-    "## Apply Noise Filter #4"
+    "## Noise Filter #4 Definition"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "0f72973b-78e7-434d-b761-ea29dbede209",
-   "metadata": {
-    "canvas": {
-     "comments": [],
-     "componentType": "CodeCell",
-     "copiedOriginId": null,
-     "diskcache": false,
-     "headerColor": "transparent",
-     "id": "7d6db198-4ca2-426f-b994-b2cd35701acc",
-     "isComponent": false,
-     "name": "",
-     "parents": []
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "valid_products = df[\"StockCode\"].apply(not_test_product)\n",
-    "df = df[valid_products]\n",
-    "df = df.reset_index(drop=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e8ba1cb0-1797-4a45-82f4-44ed02017b51",
+   "execution_count": 5,
+   "id": "12a282c1-c07c-46b3-b6db-1d396ef4ac33",
    "metadata": {},
-   "source": [
-    "## Define Noise Filter #5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "83f89a4b",
-   "metadata": {
-    "canvas": {
-     "comments": [],
-     "componentType": "CodeCell",
-     "copiedOriginId": null,
-     "diskcache": false,
-     "headerColor": "transparent",
-     "id": "e1cbd901-b8a2-4d5d-8c78-6ba865edaf47",
-     "isComponent": false,
-     "name": "",
-     "parents": []
-    },
-    "tags": []
-   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/fb/t_m5qpcj6qq85rvkh73vbxh40000gn/T/ipykernel_7221/3076091885.py:4: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
-      "  df = df.astype(attr_types)\n"
+      "/var/folders/fb/t_m5qpcj6qq85rvkh73vbxh40000gn/T/ipykernel_5612/116447840.py:4: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  new_df = new_df.astype(attr_types)\n"
      ]
     }
    ],
    "source": [
-    "\n",
     "attr_types = {\"Invoice\": str, \"StockCode\": str, \"Description\": str,\\\n",
     "             \"Quantity\": float, \"InvoiceDate\": 'datetime64[ns]', \"Price\": float,\\\n",
     "             \"Customer ID\": str, \"Country\": str}\n",
-    "df = df.astype(attr_types)\n",
-    "Q1_2010 = (df[\"InvoiceDate\"].dt.year == 2010) & (df[\"InvoiceDate\"].dt.quarter == 1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0e9b4c04-32d4-4d0f-bcc4-b6f5063440d3",
-   "metadata": {},
-   "source": [
-    "## Apply Noise Filter #5"
+    "new_df = new_df.astype(attr_types)\n",
+    "Q1_2010 = (new_df[\"InvoiceDate\"].dt.year == 2010) & (new_df[\"InvoiceDate\"].dt.quarter == 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "3c04d6eb",
-   "metadata": {
-    "canvas": {
-     "comments": [],
-     "componentType": "CodeCell",
-     "copiedOriginId": null,
-     "diskcache": false,
-     "headerColor": "transparent",
-     "id": "773f5879-9140-44c8-9e4a-7fc24f74cd27",
-     "isComponent": false,
-     "name": "",
-     "parents": []
-    },
-    "tags": []
-   },
+   "execution_count": 6,
+   "id": "7b86fa81-f065-46d9-9cf0-fb58a5c04e70",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "df = df[Q1_2010]\n",
-    "df = df.reset_index(drop=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9b4e8f96-29b2-4d36-98f8-e64a413000f3",
-   "metadata": {},
-   "source": [
-    "## Transformation Definition"
+    "new_df = new_df[Q1_2010]\n",
+    "new_df = new_df.reset_index(drop=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "6ac6dee8-e86f-41b2-bf57-2617af53b11d",
-   "metadata": {
-    "canvas": {
-     "comments": [],
-     "componentType": "CodeCell",
-     "copiedOriginId": null,
-     "diskcache": false,
-     "headerColor": "transparent",
-     "id": "4c613367-efb3-43b3-b7b2-59f0119ca6cf",
-     "isComponent": false,
-     "name": "",
-     "parents": []
-    },
-    "tags": []
-   },
+   "execution_count": 7,
+   "id": "f3133521-a234-4b61-8f34-e4633607b581",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "df[\"item_total\"] = df[\"Quantity\"] * df[\"Price\"]\n",
-    "dsbysc = df.groupby([df.InvoiceDate.dt.day_of_year, df.StockCode])\n",
+    "new_df[\"item_total\"] = new_df[\"Quantity\"] * new_df[\"Price\"]\n",
+    "dsbysc = new_df.groupby([new_df.InvoiceDate.dt.day_of_year, new_df.StockCode])\n",
     "dsbysc = dsbysc[\"item_total\"].sum().to_frame().reset_index()\n",
     "dfQ1_PA = dsbysc.pivot(index=\"InvoiceDate\", columns=\"StockCode\", values=\"item_total\").fillna(0)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "b36df3f3-5ca3-48e1-a59e-1e994acec3d2",
-   "metadata": {},
-   "source": [
-    "## Result"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "c4805fd2-4c1b-41a6-a42c-c0d866cff826",
-   "metadata": {
-    "canvas": {
-     "comments": [],
-     "componentType": "CodeCell",
-     "copiedOriginId": null,
-     "diskcache": false,
-     "headerColor": "transparent",
-     "id": "61673f27-f410-43fb-968c-35734a1d5baa",
-     "isComponent": false,
-     "name": "",
-     "parents": []
-    },
-    "tags": []
-   },
+   "execution_count": 8,
+   "id": "d7578ed6-157f-4b0d-9004-63ecc9e8b7af",
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -835,7 +594,7 @@
        "[75 rows x 3092 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -845,75 +604,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "1747ee25-d49c-47f4-b464-d71c219d97ca",
-   "metadata": {},
-   "source": [
-    "## Save Prepared Data to Disk"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "86e4ff08-a4a1-44af-9120-15536e046646",
-   "metadata": {
-    "canvas": {
-     "comments": [],
-     "componentType": "CodeCell",
-     "copiedOriginId": null,
-     "diskcache": false,
-     "headerColor": "transparent",
-     "id": "b95c8894-056f-4b6b-85bd-1cc7bfb2781e",
-     "isComponent": false,
-     "name": "",
-     "parents": []
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "fp = \"../../data/retail_q1_sales_2010_summary.csv\"\n",
-    "dfQ1_PA.to_csv(fp, index=False)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d390fcf-7d58-4ed6-8046-2f1eb7a82cfb",
-   "metadata": {
-    "canvas": {
-     "comments": [],
-     "componentType": "CodeCell",
-     "copiedOriginId": null,
-     "diskcache": false,
-     "headerColor": "transparent",
-     "id": "0846b59d-b457-4f10-a720-7ccfdaacc6b9",
-     "isComponent": false,
-     "name": "",
-     "parents": []
-    }
-   },
+   "id": "a5b5e0a8-b9d5-4d41-a926-d98a087bba8e",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
-  "canvas": {
-   "colorPalette": [
-    "inherit",
-    "inherit",
-    "inherit",
-    "inherit",
-    "inherit",
-    "inherit",
-    "inherit",
-    "inherit",
-    "inherit",
-    "inherit"
-   ],
-   "parameters": [],
-   "version": "1.0"
-  },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
